# SlimenanoCompiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake-utils/: SlimenanoArch.cmake  SlimenanoLibraryInstall.cmake  SlimenanoTest.cmake
modules/: CMakeLists.txt
modules/CharacterCollection/: CMakeLists.txt
modules/CharacterCollection/cmake/: dependencies.cmake
modules/CharacterCollection/src/: lib_main.cpp
modules/CharacterCollection/src/slimenano/: char_collection.hpp
modules/CharacterCollection/src/slimenano/collections/: char_collection_empty.cpp  char_collection_empty.hpp  char_collection_set.cpp  char_collection_set.hpp
modules/Public/: CMakeLists.txt
modules/Public/include/slimenano/: slimenano_api.hpp
modules/Utils/: CMakeLists.txt
modules/Utils/cmake/: slimenano-utilsConfig.cmake.in
modules/Utils/src/: lib_main.cpp
modules/Utils/src/slimenano/: avl_tree.hpp
modules/Utils/test/avl_tree/: test_avl_tree.cpp
